--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 Show an example for testing  <a class="toc" href="https://github.com/jeromeetienne/AR.js">AR.js</a> based on <a class="toc" href="https://threejs.org/">three.js</a> and <a class="toc" href="https://aframe.io/">Aframe</a>.
 <ul>
 	<li>
-	<a class="toc" href="https://niebert.github.io/glb4arvr/glb4aframe.html" target="_blank">AFrame - 360 Degree Image - Dinosaur</a> based on the 
+	<a class="toc" href="glb4aframe.html" target="_blank">AFrame - 360 Degree Image - Dinosaur</a> based on the 
 	</li>
 	<li>
-	<a class="toc" href="https://niebert.github.io/glb4arvr/glb4arjs.html" target="_blank">AR-Example - Dinosaur</a> <a href="https://niebert.github.io/AR-Examples/markers/Marker_Printout_AR_demo.pdf" target="_blank">Hiro marker</a>.
+	<a class="toc" href="glb4arjs.html" target="_blank">AR-Example - Dinosaur</a> <a href="https://niebert.github.io/AR-Examples/markers/Marker_Printout_AR_demo.pdf" target="_blank">Hiro marker</a>.
 	</li>
 </ul>
 
