--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ Show an example for testing  <a class="toc" href="https://github.com/jeromeetien
 	<a class="toc" href="glb4aframe.html" target="_blank">AFrame - 360 Degree Image - Dinosaur</a> based on the 
 	</li>
 	<li>
-	<a class="toc" href="glb4arjs.html" target="_blank">AR-Example - Dinosaur</a> <a href="https://niebert.github.io/AR-Examples/markers/Marker_Printout_AR_demo.pdf" target="_blank">Hiro marker</a>.
+	<a class="toc" href="glb4arjs.html" target="_blank">AR-Example - Aorta-OSI</a> <a href="https://niebert.github.io/AR-Examples/markers/Marker_Printout_AR_demo.pdf" target="_blank">Hiro marker</a>.
 	</li>
 </ul>
 
