--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ There are more example on GitHub to explore. Please feel free to fork and modify
 </ul>
 <hr>
 	<center>
-		<a href="https://github.com/niebert/glb4arvr" target="_blank">Git Repository <tt>glb4arvr</tt></a> - <a href="https://github.com/niebert/glb4arvr/archive/refs/heads/main.zip" target="_blank">ZIP</a>
+		<a href="https://github.com/hundertm/glb4arvr" target="_blank">Git Repository <tt>glb4arvr</tt></a> - <a href="https://github.com/hundertm/glb4arvr/archive/refs/heads/main.zip" target="_blank">ZIP</a>
 	</center>
 </body>
 </html>
