Update A-Frame script version to 1.0.1

--- a/glb4arjs.html
+++ b/glb4arjs.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Aorta - AR - Hiro Marker</title>
   <!-- script src="js/aframe-v1.7.1.js"></script -->
-  <script src="js/aframe.min.js"> </script>
+  <script src="js/aframe-1.0.1.js"> </script>
   <script src="js/aframe-ar.js"> </script>
   <script src="js/aframe-extras.js"></script>
 </head>
