--- a/glb4arjs.html
+++ b/glb4arjs.html
@@ -13,11 +13,11 @@
   <a-scene embedded arjs>
   <a-marker preset="hiro">
       <a-entity
-      position="25 -498 138"
+      position="0 0 0"
       rotation="0 90 0"
       scale="1.2 1.2 1.2"
       animation-mixer="loop: repeat"
-      gltf-model="./model3d/Non-Directionl-OSI.glb"
+      gltf-model="./model3d/aorta1.glb"
       ></a-entity>
   </a-marker>
   <a-light type="ambient" color="#FFF" light=""></a-light>
