--- a/glb4aframe.html
+++ b/glb4aframe.html
@@ -9,7 +9,7 @@
     <script src="js/aframe-v1.0.4.js"></script>    
     <script src="js/aframe-extras.js"></script>    
 -->
-    <script src="js/aframe-1.7.0.js"></script>    
+    <script src="js/aframe-1.7.1.js"></script>    
     <script src="js/aframe-extras.js"></script>    
     
 </head>
@@ -17,7 +17,7 @@
   <a-scene inspector="" keyboard-shortcuts="" screenshot="" vr-mode-ui="" device-orientation-permission-ui="" visible="">
     <!-- Load the 3D model -->
     <a-assets>
-      <a-asset-item id="my3dmodel" src="model3d/primal_carnage_spinosaurus_small.glb"></a-asset-item>
+      <a-asset-item id="my3dmodel" src="model3d/aorta1.glb"></a-asset-item>
       <img id="sky" src="img/rieselfelder1.jpg">
     </a-assets>
 
@@ -30,6 +30,6 @@
 	<a-sky src="#sky"></a-sky>
     <!-- Add a camera -->
     <a-camera position="-2.605466530698633 1.6 -9.335198258886683" camera="" rotation="-8.594366926962346 230.90199143772168 0" look-controls="" wasd-controls="" data-aframe-inspector-original-camera=""></a-camera>
-  <div class="a-loader-title" style="display: none;">Primal Carnal Spinosaurus</div></a-scene>
+  <div class="a-loader-title" style="display: none;">Aorta</div></a-scene>
 </body>
 </html>
